<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Выпадающие списки для выбора городов вылета и прилета -->
    <Spinner
        android:id="@+id/spinnerDeparture"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/spinner_background"
        android:padding="16dp"
        android:prompt="@string/select_departure_city"
        app:layout_constraintEnd_toStartOf="@id/spinnerArrival"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerArrival"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/spinner_background"
        android:padding="16dp"
        android:prompt="@string/select_arrival_city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/spinnerDeparture"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- Текстовые поля для ввода даты вылета и прилета -->
    <LinearLayout
        android:id="@+id/layoutDepartureDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/spinnerArrival">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextDepartureDateContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/departure_date_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextDepartureDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextArrivalDateContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/arrival_date_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextArrivalDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


    <!-- Текстовые поля для числа пассажиров -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextAdultsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/adults_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/layoutDepartureDate">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextAdults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextChildrenContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/children_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/editTextAdultsContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextChildren"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextInfantsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/infants_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/editTextChildrenContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextInfants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Кнопка поиска -->
    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/search_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextInfantsContainer" />

</androidx.constraintlayout.widget.ConstraintLayout>
